--- a/index.html
+++ b/index.html
@@ -2621,7 +2621,7 @@
                       </div>
                     </div>
                     <a
-                      href="https://pay.hotmart.com/J52484495T?off=8cjma2rh&amp;_hi=eyJjaWQiOiIxNzQ3MjI0OTM4MTEwOTQ5MTc3NzI2NTMzOTczMTAwIiwiYmlkIjoiMTc0NzIyNDkzODExMDk0OTE3NzcyNjUzMzk3MzEwMCIsInNpZCI6IjE0NGY0N2QzZTIwNzQ2MDg4YmU3MjkyZGVjMWQzZDVmIn0=.1747225513633"
+                      href="https://go.hotmart.com/N81318731V?ap=5034&redirectionUrl=https://pay.hotmart.com/J52484495T?off=8cjma2rh"
                       target="_blank"
                       class="combine-button-colored w-button"
                       >Quero esse</a
@@ -2658,7 +2658,7 @@
                     </div>
                     <div class="combine-line_divider"></div>
                     <a
-                      href="https://pay.hotmart.com/J52484495T?off=ylvk7bv3&amp;_hi=eyJjaWQiOiIxNzQ3MjI0OTM4MTEwOTQ5MTc3NzI2NTMzOTczMTAwIiwiYmlkIjoiMTc0NzIyNDkzODExMDk0OTE3NzcyNjUzMzk3MzEwMCIsInNpZCI6IjE0NGY0N2QzZTIwNzQ2MDg4YmU3MjkyZGVjMWQzZDVmIn0=.1747225534981"
+                      href="https://go.hotmart.com/N81318731V?ap=58d2&redirectionUrl=https://pay.hotmart.com/J52484495T?off=ylvk7bv3"
                       target="_blank"
                       class="combine-button w-button"
                       >Quero esse</a
@@ -2687,7 +2687,7 @@
                     </div>
                     <div class="combine-line_divider"></div>
                     <a
-                      href="https://pay.hotmart.com/J52484495T?off=7nvpzuxg&amp;_hi=eyJjaWQiOiIxNzQ3MjI0OTM4MTEwOTQ5MTc3NzI2NTMzOTczMTAwIiwiYmlkIjoiMTc0NzIyNDkzODExMDk0OTE3NzcyNjUzMzk3MzEwMCIsInNpZCI6IjE0NGY0N2QzZTIwNzQ2MDg4YmU3MjkyZGVjMWQzZDVmIn0=.1747225551381"
+                      href="https://go.hotmart.com/N81318731V?ap=48a9&redirectionUrl=https://pay.hotmart.com/J52484495T?off=7nvpzuxg"
                       target="_blank"
                       class="combine-button w-button"
                       >Quero esse</a
@@ -2716,7 +2716,7 @@
                     </div>
                     <div class="combine-line_divider"></div>
                     <a
-                      href="https://pay.hotmart.com/J52484495T?off=p3xmrqmh&amp;_hi=eyJjaWQiOiIxNzQ3MjI0OTM4MTEwOTQ5MTc3NzI2NTMzOTczMTAwIiwiYmlkIjoiMTc0NzIyNDkzODExMDk0OTE3NzcyNjUzMzk3MzEwMCIsInNpZCI6IjE0NGY0N2QzZTIwNzQ2MDg4YmU3MjkyZGVjMWQzZDVmIn0=.1747225565516"
+                      href="https://go.hotmart.com/N81318731V?ap=5ece&redirectionUrl=https://pay.hotmart.com/J52484495T?off=p3xmrqmh"
                       target="_blank"
                       class="combine-button w-button"
                       >Quero esse</a
